Fix: Best score contrast

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -35,7 +35,7 @@ header h1 {
 
 .score span {
   color: rgb(44, 103, 186);
-  background-color: rgb(230, 229, 204);
+  background-color: #000;
   border-radius: 10%;
   height: 50px;
   width: 50px;
